--- a/SvelteTaskList/package.json
+++ b/SvelteTaskList/package.json
@@ -2,20 +2,31 @@
 	"name": "svelte-app",
 	"version": "1.0.0",
 	"devDependencies": {
+		"@testing-library/svelte": "^3.0.0",
 		"cross-env": "^5.2.0",
 		"css-loader": "^2.1.1",
+		"jasmine": "^3.6.1",
+		"jasmine-core": "^3.6.0",
+		"karma": "^5.2.3",
+		"karma-chrome-launcher": "^3.1.0",
+		"karma-jasmine": "^4.0.1",
+		"karma-jasmine-html-reporter": "^1.5.4",
+		"karma-spec-reporter": "0.0.32",
+		"karma-webpack": "^4.0.2",
 		"mini-css-extract-plugin": "^0.6.0",
 		"serve": "^11.0.0",
 		"style-loader": "^0.23.1",
 		"svelte": "^3.0.0",
 		"svelte-loader": "2.13.3",
 		"svelte-spa-router": "^3.0.3",
+		"watchify": "^3.11.1",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.0",
 		"webpack-dev-server": "^3.3.1"
 	},
 	"scripts": {
 		"build": "cross-env NODE_ENV=production webpack",
-		"dev": "webpack-dev-server --content-base public"
+		"dev": "webpack-dev-server --content-base public",
+		"test": "karma start"
 	}
 }
