--- a/SvelteTaskList/package.json
+++ b/SvelteTaskList/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"devDependencies": {
 		"@testing-library/svelte": "^3.0.0",
+		"@types/jasmine": "^3.5.14",
 		"cross-env": "^5.2.0",
 		"css-loader": "^2.1.1",
 		"jasmine": "^3.6.1",
@@ -19,6 +20,7 @@
 		"svelte": "^3.0.0",
 		"svelte-loader": "2.13.3",
 		"svelte-spa-router": "^3.0.3",
+		"ts-loader": "^8.0.5",
 		"watchify": "^3.11.1",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.0",
